<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">


    <LinearLayout
        android:id="@+id/ticker_panel"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/circle_background"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:padding="4dp">


        <TextView
            android:id="@+id/txt_ticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"

            android:textSize="26sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_normal_services"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="81dp" />


    <Button
        android:id="@+id/btn_services_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_services"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="31dp" />

    <Button
        android:id="@+id/btn_services_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_stop_services"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:id="@+id/txt_caption_bound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_bind_services"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_bound_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_bind_services"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="160dp" />

    <Button
        android:id="@+id/btn_bound_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_unbind_services"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="208dp" />

    <TextView
        android:id="@+id/txt_caption_foreground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_foreground_services"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_foreground_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_foreground_services_start"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="160dp" />

    <Button
        android:id="@+id/btn_foreground_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_foreground_services_stop"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="208dp" />


</LinearLayout>

